atgames_dev - Update ruby-version

--- a/atgames_dev/0.1/Dockerfile
+++ b/atgames_dev/0.1/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install -y ffmpeg
 RUN apt-get install -y sphinxsearch # for D2D
 RUN apt-get install -y imagemagick # for D2D
 
-# instqll qt for capybara-webkit
+# install qt for capybara-webkit
 RUN apt-get install -y qt5-default libqt5webkit5-dev gstreamer1.0-plugins-base gstreamer1.0-tools gstreamer1.0-x
 
 # system
@@ -21,13 +21,18 @@ RUN mkdir /var/run/sshd
 RUN apt-get install -y sudo
 RUN locale-gen "zh_TW.UTF-8" # fix git log display UTF-8
 
+# Library for ADS
+RUN apt-get install mcrypt libmcrypt-dev
+
 # RVM
 RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
 RUN apt-get install -y curl
 RUN \curl -sSL https://get.rvm.io | bash -s stable
 RUN echo "source /usr/local/rvm/scripts/rvm" >> /etc/bash.bashrc
-RUN /bin/bash -l -c "rvm install 2.0.0-p481" # for D2D
-RUN /bin/bash -l -c "rvm install 2.1.10" # for ADS
+#RUN /bin/bash -l -c "rvm install 2.0.0-p481" # for D2D
+#RUN /bin/bash -l -c "rvm install 2.1.10" # for ADS
+RUN /bin/bash -l -c "rvm install 2.2.3" # for D2D
+RUN /bin/bash -l -c "rvm install 2.3.5" # for ADS
 
 # NVM
 RUN \curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.1/install.sh | PROFILE=/etc/bash.bashrc NVM_DIR=/usr/local/nvm bash
